samples/_failures_safe/1761149727_586026_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c3a3b1d.c: In function ‘bfs’:
./samples/SAFE/__tmp_9c3a3b1d.c:161:9: error: expected expression at end of input
  161 |         for (
      |         ^~~
./samples/SAFE/__tmp_9c3a3b1d.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c3a3b1d.c:161:9: error: expected declaration or statement at end of input
